# LearnC51

./: .gitignore  CMakeLists.txt  build.sh  flush.sh  main.c  toolchain.cmake
include/c52/: regx52.h
include/key/: key.c  key.h
include/lcd/: LCD1602.c
include/mled/: mled.c  mled.h
include/num/: num.c  num.h
include/time/: time.h
include/timer/: time.c  time.h
include/uart/: uart.c  uart.h
include/utils/: delay.c  delay.h
src/: delay.c  delay.h  main.c
